# openfabmap

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  FindOpenCV.cmake  LICENSE  README.md  README.txt  openFABMAP.sln  settings.txt
ANN/: ANN.h
OpenSURF/: fasthessian.h  surf.h  surflib.h  utils.cpp  utils.h
VSMacros80/Samples/: Samples.vsmacros
cmake/: FindANN.cmake  FindOpenCV.cmake
doxygen/: Doxyfile.in  mainpage.dox.hpp
doxygen/citations/: openFABMAP.bib  openFABMAP.enw
exampleopenFABMAP/: main.cpp
include/: bowmsctrainer.hpp  chowliutree.hpp  fabmap.hpp  inference.hpp  msckd.h  openfabmap.hpp
openFABMAP/: bagofwords.cpp  bagofwords.h  chowliutree.cpp  chowliutree.h  codebook.cpp  codebook.h  fastbailoutlist.cpp  fastbailoutlist.h  global.h  main.cpp  openFABMAP.vcproj  settings.txt
openFABMAP/ANN/: ANN.lib
openFABMAP/OpenSURF/: fasthessian.cpp  integral.h  ipoint.cpp  ipoint.h  kmeans.h  main.cpp  responselayer.h
openFABMAPexe/: main.cpp
samples/: openFABMAPcli.cpp  settings.yml
src/: BOWMSCTrainer.cpp  ChowLiuTree.cpp  FabMap.cpp  bowmsctrainer.cpp  chowliutree.cpp  fabmap.cpp  inference.cpp  main.cpp  msckd.cpp
